--- a/JavaScriptLibraries/testCss.css
+++ b/JavaScriptLibraries/testCss.css
@@ -169,9 +169,10 @@ body{
 }
 
 .questions{
+  background-color: grey;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 0px;
+  left: 2px;
 }
 
 
