change svg container width

--- a/JavaScriptLibraries/testCss.css
+++ b/JavaScriptLibraries/testCss.css
@@ -1,3 +1,4 @@
+
 html {
   height: 100%;
 }
@@ -180,8 +181,11 @@ body{
 
 /*-----------------------------------------------------------------------------------------------------------------------------------------*/
 #showWindow{
+  /*margin: auto;*/
+  /*width: 100%;*/
+  display: block;
   margin: auto;
-  width: 100%;
+  width: 500px;
 }
 
 .hidden{
